--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/[Ll]ibrary/
+*/[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+*/[Tt]emp
 /Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
@@ -32,3 +33,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.log
+Meaningful Lever/Library/shadercompiler-UnityShaderCompiler.exe0.log
